# sdirstat

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  MAINTAINERS.md  README.md  RELEASE.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: aur.yml  build.yml  ci.yml  codeql.yml  pages.yml  publish.yml  release.yml  scorecard.yml
desktop/: .gitignore  Cargo.toml  README.md  tauri.conf.json
desktop/capabilities/: default.json
desktop/icons/: icon.icns
desktop/src/: main.rs
desktop/ui/: index.html
docs/: AI-DISCOVERY.md  CROSS_PLATFORM_GUI.md  DEPLOYMENT.md  PUBLISHING.md  SIGNING.md  index.html  index.md  llms.txt  robots.txt  sitemap.xml
docs/.well-known/: agent-skills.json  agent.json  api-catalog  auth.md  http-message-signatures-directory  mcp.json  oauth-authorization-server  oauth-protected-resource  openapi.json  webmcp.json
examples/: scan.rs
packaging/: PKGBUILD  build-deb.sh  sdirstat-gui  sdirstat.desktop
packaging/aur/: README.md
packaging/aur/sdirstat/: .SRCINFO  PKGBUILD
packaging/aur/sdirstat-bin/: .SRCINFO  PKGBUILD
packaging/chocolatey/: sdirstat.nuspec.template
packaging/chocolatey/tools/: VERIFICATION.txt  chocolateyInstall.ps1.template
src/: app.html  hash.rs  internal.rs  lib.rs  main.rs  uring.rs  viewer.html
