[package]
name = "sdirstat"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Headless filesystem indexer — the directory tree as a Web (node = own st_blocks, adj = dir→children), the size fold = the B/U accumulator (preduce), the parallel walk = pmapAt (schedule-free). Emits the QDirStat cache format and a nested JSON tree (two fromTerm out-maps over one scanned Web). The zero-dep Rust replacement for the Perl qdirstat-cache-writer."

# The backend is zero-dep — std only (the qwalk/swalk/collapse_wire ethic).
[dependencies]

[[bin]]
name = "sdirstat"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

# The native desktop app lives in desktop/ and pulls in the Tauri dependency tree. It is kept
# OUT of this workspace so the core binary stays std-only and its build/CI are unaffected.
[workspace]
exclude = ["desktop"]
