[package]
name = "sdirstat"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A fast, parallel disk-usage analyzer with an interactive treemap/sunburst GUI. From one scan it emits a self-contained HTML report, a QDirStat cache file, a JSON tree, or a grand total. Zero runtime dependencies; byte-exact with du."
repository = "https://github.com/Ptyktos/sdirstat"
homepage = "https://ptyktos.github.io/sdirstat/"
readme = "README.md"
keywords = ["disk-usage", "treemap", "du", "qdirstat", "filesystem"]
categories = ["filesystem", "command-line-utilities", "visualization"]
rust-version = "1.70"
# Keep the published crate to the binary + its embedded assets (src/, packaging/sdirstat.svg). The
# desktop app, CI, docs, and reference clones aren't part of `cargo install sdirstat`.
exclude = ["/desktop", "/.github", "/docs", "/reference", "/.scratch", "/dist", "/fs-root.html", "/report.html", "/usr.html"]

# The backend is zero-dep — std only (the qwalk/swalk/collapse_wire ethic).
[dependencies]

[[bin]]
name = "sdirstat"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

# The native desktop app lives in desktop/ and pulls in the Tauri dependency tree. It is kept
# OUT of this workspace so the core binary stays std-only and its build/CI are unaffected.
[workspace]
exclude = ["desktop"]
